# zipmt

./: .gitignore  DECISIONS.md  LESSONS.md  LICENSE.txt  MINDMAP.md  Makefile  ProjectHome.md  README.md  ZipmtDocumentation.md  help.txt  task.md  tui_err.txt
.agents/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md
agents/: AGENT.md  AGENTS.md  CHAT.md  DOCUMENTATION_INDEX.md  PROJECT.md  PROJECT.md.template
benchmarks/: rust-history.yaml
docs/: ARCH.md  ARCH_LCARS.md  ARCH_PIPELINE_FLOW.md  ARCH_RUST.md  ARCH_RUST_REFACTOR_3.md  ARCH_SLICE_OBSERVABILITY.md  ARCH_SPLIT_TUI_UPLIFT.md  ARCH_TUI.md  ARCH_TUI_TEST.md  ARCH_TUI_UX.md  EPIC_RUST_REFACTOR_3.md  IO_CHART_SPRINT.md  PRD.md  RUST_QUALITY_TOOLING.md  USAGE.md  USER_STORIES.md  USER_STORIES_LCARS.md  USER_STORIES_PIPELINE_FLOW.md  USER_STORIES_RATATUI.md  USER_STORIES_RATATUI_UPGRADE.md  USER_STORIES_RUST_REFACTOR.md  USER_STORIES_RUST_REFACTOR_2.md  USER_STORIES_SLICE_OBSERVABILITY.md  USER_STORIES_SPLIT_TUI_UPLIFT.md  USER_STORIES_TUI.md  USER_STORIES_TUI_TEST.md  USER_STORIES_TUI_UX.md
scripts/: render_tui_screenshots.py
src/: Makefile  zipmt.c
tests/: test_trace_annotate.py
wiki/: PageName.wiki  (+1 more)
zipmt-rust/: Cargo.toml  clippy.toml  deny.toml
zipmt-rust/src/: compressor.rs  lib.rs  main.rs  pipeline.rs  split_mode.rs  stream_mode.rs  tui.rs
zipmt-rust/src/snapshots/: zipmt_rust__tui__tests__tui_layout_split_mode_snapshot.snap  zipmt_rust__tui__tests__tui_layout_stream_mode_snapshot.snap
zipmt-rust/src/tui/: platform.rs  reducer.rs  render.rs  runtime.rs
zipmt-rust/tests/: integration_test.rs
(+378 files in other folders)
