[package]
name = "zipmt-rust"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
bzip2 = "0.4"
flate2 = "1.0"
xz2 = "0.1"
rayon = "1.10"
ctrlc = "3.4"
crossterm = "0.27"
ratatui = "0.26"
tempfile = "3.10"


[dev-dependencies]
insta = { version = "1.34", features = ["yaml"] }
regex = "1.10"
